rust/macros/tests/invalid/target/debug/deps/triple_arguments_rs-b7e1a66acd7b3c24.d
/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/triple_arguments_rs-b7e1a66acd7b3c24: triple-arguments.rs

/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/triple_arguments_rs-b7e1a66acd7b3c24.d: triple-arguments.rs

triple-arguments.rs:
